<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBF8DD"
    android:scrollbars="horizontal|vertical"
    tools:context=".form_1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toStartOf="@+id/CoConToTo"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo2"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteY="91dp" />


    <TextView
        android:id="@+id/CoConToTo"
        android:layout_width="325dp"
        android:layout_height="38dp"
        android:text="@string/CoConToTo"
        android:textColor="#02433D"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="95dp" />

    <View
        android:id="@+id/view2"
        android:layout_width="399dp"
        android:layout_height="554dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="16dp"
        android:background="#F8F5F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newAcc"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/c_owner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/name"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/c_shop_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="224dp"
        android:text="@string/email"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.226"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_owner_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/c_tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/address"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_shop_name"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/c_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/phoneNo"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_tv_address"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/c_tv_con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/password"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_tv_email"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/c_btn_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="457dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="64dp"
        android:background="#009688"
        android:text="@string/btn_sub"
        android:textColor="#000000"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/c_name"
        android:layout_width="246dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/c_owner_name"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <EditText
        android:id="@+id/c_mail1"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toEndOf="@+id/c_shop_name"
        app:layout_constraintTop_toBottomOf="@+id/c_name" />

    <EditText
        android:id="@+id/c_contact"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toEndOf="@+id/c_tv_email"
        app:layout_constraintTop_toBottomOf="@+id/c_address" />

    <EditText
        android:id="@+id/c_pass"
        android:layout_width="254dp"
        android:layout_height="41dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toEndOf="@+id/c_tv_con"
        app:layout_constraintTop_toBottomOf="@+id/c_contact" />

    <EditText
        android:id="@+id/c_address"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toEndOf="@+id/c_tv_address"
        app:layout_constraintTop_toBottomOf="@+id/c_mail1" />

</androidx.constraintlayout.widget.ConstraintLayout>